# oaip

games_project_Hvezhenko/: Makefile  cli.py  pyproject.toml
games_project_Hvezhenko/VD_games/: VD_games.py  engine.py  pyproject.toml
games_project_Hvezhenko/VD_games/games/: even.py
games_project_Hvezhenko/VD_games/scripts/: VD_even.py  VD_prime.py  VD_progression.py  pyproject.toml
