[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VD-games"
version = "0.1.0"
description = "Игровой проект на Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
VD-games = "VD_games.scripts.VD_games:main"
VD-even = "VD_games.scripts.VD_even:play_even_game"
